--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ DB_TIMEZONE=Asia/Shanghai
 # 日志配置
 LOG_LEVEL=info
 LOG_FORMAT=json
+
+# JWT配置
+JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
+JWT_ACCESS_TOKEN_DURATION=15
+JWT_REFRESH_TOKEN_DURATION=168
