feat: register captcha email

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,20 @@ DB_NAME=flashcard_db
 DB_SSL_MODE=disable
 DB_TIMEZONE=Asia/Shanghai
 
+# Redis配置
+REDIS_HOST=172.22.0.23
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=
+
+# Smtp邮箱配置
+SMTP_HOST=smtp.qq.com
+SMTP_PORT=465
+SMTP_USERNAME=592918942@qq.com
+SMTP_PASSWORD=tjkenilicwaqbfia
+FROM_EMAIL=flashcard@fc.com
+FROM_NAME=flashcard
+
 # 日志配置
 LOG_LEVEL=info
 LOG_FORMAT=json
